Fix button inner align in PartyRequestForm

--- a/src/components/PartyRequestForm/PartyRequestForm.scss
+++ b/src/components/PartyRequestForm/PartyRequestForm.scss
@@ -76,12 +76,25 @@ $CRF-close-bar-height: spacing(18);
     }
   }
 
+  &__party-type-inner-button-container {
+    margin: auto 0 0 0;
+
+    @media ($medium-up) {
+      margin: 0 0 0 auto;
+    }
+  }
+
   &__party-type-inner-button {
-    margin-top: spacing(8);
+    margin-top: spacing(4);
 
     @media ($medium-up) {
       margin: 0;
     }
+  }
+
+  &__party-add-ons-inner-button {
+    margin-top: auto;
+    margin-bottom: 0;
   }
 
   &__party-add-ons-inner-button {
